# bevy-scratchpad

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  btca.config.jsonc  skills-lock.json
assets/shaders/: outline_ssbo.wgsl
benches/: solver.rs
docs/: MOUSE_COLLISION_IMPROVEMENTS.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_AUDIT.md  SOFTBODY_OUTLINE_PLAN.md
docs/brainstorms/: 2026-04-05-profiling-setup-brainstorm.md
docs/handoff/: 2026-04-06-phase-a-results.md
docs/plans/: 2026-04-05-feat-agent-driven-profiling-setup-plan.md
docs/research/: Bevy Soft-Body Optimization Research.md
docs/solutions/architecture/: bevy-physics-testability-and-profiling.md
docs/solutions/integration-issues/: material2d-bind-group-stale-buffer.md
src/: config.rs  lib.rs  main.rs
src/physics/: debug.rs  geometry.rs  mod.rs  outline_render.rs  point.rs  soft_body.rs  solver.rs  solver_core.rs  systems.rs
