[package]
name = "bevy-scratchpad"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevy: turn OFF default features and enable just what we need for a small web build.
# Add or remove feature lines below based on what you actually use:
# - bevy_sprite: 2D sprites; drop if you're purely drawing via meshes/shaders
# - bevy_asset + png: only if you load textures/assets; drop both if not needed
bevy = { version = "0.16.1", features = [

  "webgpu"           # keep for WebGPU backend
]}
bevy_polyline = "0.12.0"

rand = { version = "0.9.2", features = ["small_rng"] }

# --- WASM-specific deps (needed for the rand/getrandom stack in browsers) ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# -------------------- PROFILES --------------------

# Faster dev builds (unchanged)
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

# Release: keep thin LTO and fewer codegen units (helps size + perf)
[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"   # (wasm aborts anyway; explicit here keeps native release small, too) 

# Web/wasm size-first profile
[profile.wasm-release]
inherits = "release"
opt-level = "z"         # try "s" vs "z" and keep the smaller
strip = "debuginfo"     # remove DWARF
# lto stays "thin" via inherited release; consider lto=true for a bit smaller at slower builds
