[package]
name = "bevy-scratchpad"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevy: turn OFF default features and enable just what we need for a small web build.
# Add or remove feature lines below based on what you actually use:
# - bevy_sprite: 2D sprites; drop if you're purely drawing via meshes/shaders
# - bevy_asset + png: only if you load textures/assets; drop both if not needed
bevy = { version = "0.18.1", default-features = false, features = [
  "bevy_winit",
  "bevy_window",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_sprite_render",
  "webgpu",
  "bevy_gizmos",
  "bevy_gizmos_render"
]}
rand = "0.10.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
profile = ["bevy/trace", "bevy/trace_chrome", "bevy/bevy_log", "bevy/debug", "dep:serde", "dep:serde_json"]

[[bin]]
name = "bevy-scratchpad"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "summarize-trace"
path = "src/bin/summarize_trace.rs"
required-features = ["profile"]

# --- WASM-specific deps (needed for the rand/getrandom stack in browsers) ---
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[[bin]]
name = "headed-bench"
path = "src/bin/headed_bench.rs"

[[bench]]
name = "solver"
harness = false

# -------------------- PROFILES --------------------

# Faster dev builds (unchanged)
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

# Release: keep thin LTO and fewer codegen units (helps size + perf)
[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"   # (wasm aborts anyway; explicit here keeps native release small, too) 

# Web/wasm size-first profile
[profile.wasm-release]
inherits = "release"
opt-level = "z"         # try "s" vs "z" and keep the smaller
strip = "debuginfo"     # remove DWARF
# lto stays "thin" via inherited release; consider lto=true for a bit smaller at slower builds
